# Time-Series-Forecasting-with-XGBoost

./: .gitignore  README.md  artifacts_20251003_205625  artifacts_20251003_231209  artifacts_20251004_003935  artifacts_20251004_004731  project_scaffold.py  pyproject.toml  requirements.txt
notebooks/: eda.ipynb  model_training.ipynb
src/myapp/: main.py
src/myapp/components/: data_cleaning.py  data_ingestion.py  data_preprocessing.py  data_validation.py  feature_engineering.py
src/myapp/config/: config_loader.py  config_manager.py  config_schema.py
src/myapp/data/: data_validation_schema.py  preprocessing_schema.py  validation_schema.py
src/myapp/pipeline/: stage_01_data_ingestion.py
src/myapp/pipelines/: main_pipeline.py  stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_cleaning.py  stage_04_data_preprocessing.py  stage_05_feature_engineering.py
src/myapp/schemas/: cleaning_schema.py  feature_engineering_schema.py  preprocessing_schema.py  validation_schema.py
src/myapp/services/: inference_app.py  inference_pipeline.py  inference_schema.py  model_loader.py
src/myapp/utils/: column_mappings.py  filepaths.py  logger.py
tests/unit/: inference_pipeline_test.py  test_utils.py
