[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myapp"
version = "0.1.0"
description = "My awesome app"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Juges Debnath", email = "jugesdebnath7@gmail.com" }
]
license = { text = "MIT" }
keywords = ["config", "app", "example"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    # "requests>=2.25",
]

[project.urls]
Homepage = "https://github.com/jugesdebnath7"
Repository = "https://github.com/jugesdebnath7/Time-Series-Forecasting-with-XGBoost"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["myapp*"]
exclude = ["tests*"]
